# ducp-node-rs

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/conformance/: Cargo.toml
crates/conformance/src/: lib.rs
crates/conformance/tests/: codec.rs  finality.rs  fraud.rs  metering.rs  q_observable.rs  replication.rs  settlement.rs
crates/consensus/: Cargo.toml
crates/consensus/src/: lib.rs
crates/ducp-types/: Cargo.toml
crates/ducp-types/src/: lib.rs
crates/dvm/: Cargo.toml
crates/dvm/src/: lib.rs
crates/governance/: Cargo.toml
crates/governance/src/: lib.rs
crates/ledger/: Cargo.toml
crates/ledger/src/: lib.rs
crates/verification/: Cargo.toml
crates/verification/src/: lib.rs
ducp-node/: Cargo.toml
ducp-node/src/: lib.rs  main.rs
ducp-node/tests/: e2e.rs
node/: Cargo.toml
node/src/: lib.rs  main.rs
scripts/: devnet.sh
test-vectors/: README.md
test-vectors/codec/: types.json
test-vectors/fraud/: challenge.json
test-vectors/metering/: cases.json
test-vectors/q-observable/: dp0001.json
test-vectors/replication/: blocks.json
test-vectors/settlement/: finality.json  happy_path.json
