[workspace]
resolver = "2"
members = [
    "crates/ducp-types",
    "crates/dvm",
    "crates/verification",
    "crates/ledger",
    "crates/consensus",
    "crates/governance",
    "crates/conformance",
    "ducp-node",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "BUSL-1.1"
authors = ["Pawan Singh <mr.singhpawan@gmail.com>"]
repository = "https://github.com/ducp-protocol/ducp-node-rs"
homepage = "https://github.com/ducp-protocol/spec"

[workspace.dependencies]
# Internal crates (path-based; shared so member manifests stay terse).
ducp-types = { path = "crates/ducp-types" }
ducp-dvm = { path = "crates/dvm" }
ducp-verification = { path = "crates/verification" }
ducp-ledger = { path = "crates/ledger" }
ducp-consensus = { path = "crates/consensus" }
ducp-governance = { path = "crates/governance" }

# Canonical codec + hashing + identity (reference-node binding choices, spec/bindings/01).
borsh = { version = "1.7", features = ["derive"] }
blake3 = "1.8"
ed25519-dalek = "2"
getrandom = "0.2"

# JSON-RPC wire layer + async runtime + CLI + logging (node).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
thiserror = "2"
jsonrpsee = { version = "0.26", features = ["server", "client", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# WebAssembly DVM (spec/bindings/02).
wasmtime = "46"
wat = "1"

anyhow = "1"

# Dev / test.
proptest = "1"
