[package]
name = "ducp-node"
description = "DUCP reference node — runs a node on the DUCP network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
name = "ducp_node"
path = "src/lib.rs"

[[bin]]
name = "ducp-node"
path = "src/main.rs"

[dependencies]
ducp-types.workspace = true
ducp-dvm.workspace = true
ducp-verification.workspace = true
ducp-ledger.workspace = true
ducp-consensus.workspace = true
ducp-governance.workspace = true
jsonrpsee.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
