[package]
name = "ducp-conformance"
description = "DUCP Reference-node binding conformance harness: loads the published test vectors and checks them against the reference crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
ducp-types.workspace = true
ducp-dvm.workspace = true
ducp-verification.workspace = true
ducp-ledger.workspace = true
ducp-consensus.workspace = true
ducp-governance.workspace = true
borsh.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
