[package]
name = "ducp-consensus"
description = "Transaction ordering and finality (Profile 0: single-sequencer devnet)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ducp-types.workspace = true
ducp-ledger.workspace = true
ducp-governance.workspace = true
