[package]
name = "ducp-types"
description = "Canonical DUCP data model: identifiers, the Compute Proof, and the Quant (ℚ) efficiency observable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
