[package]
name = "ducp-types"
description = "Canonical DUCP data model: identifiers, the Compute Proof, and the Quant (ℚ) efficiency observable"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
borsh.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
getrandom.workspace = true
serde.workspace = true
hex.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
