[package]
name = "ducp-governance"
description = "Reputation-weighted, role-chamber governance (Profile 0: static parameter set)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ducp-types.workspace = true
serde.workspace = true
