[package]
name = "ducp-ledger"
description = "Settlement of UCU, the Standing reputation ledger, and the ℚ-ledger"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ducp-types.workspace = true
ducp-governance.workspace = true
borsh.workspace = true
