[package]
name = "ducp-verification"
description = "Layered verification: TEE attestation, ZK proofs, and sampled re-execution"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ducp-types = { path = "../ducp-types" }
