[package]
name = "ducp-verification"
description = "Layered verification: sampled re-execution + challenge (TEE/ZK reserved)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ducp-types.workspace = true
ducp-dvm.workspace = true
